GitAssgn/force-app/main/default/objects/MediaBillAssociation__c/MediaBillAssociation__c.object-meta.xml
<CustomObject>
    <label>MediaBillAssociation</label>
    <nameField>
        <displayFormat>A-{00}</displayFormat>
        <label>MediaBillAssociation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MediaBillAssociation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>