GitAssgn/force-app/main/default/objects/MediaBillAssociation__c/fields/Bill__c.field-meta.xml
<CustomField>
    <fullName>Bill__c</fullName>
    <label>Bill</label>
    <referenceTo>Bill__c</referenceTo>
    <relationshipLabel>MediaBillAssociation</relationshipLabel>
    <relationshipName>MediaBillAssociation</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>