GitAssgn/force-app/main/default/objects/MediaBillAssociation__c/fields/Media__c.field-meta.xml
<CustomField>
    <fullName>Media__c</fullName>
    <label>Media</label>
    <referenceTo>Media__c</referenceTo>
    <relationshipLabel>MediaBillAssociation</relationshipLabel>
    <relationshipName>MediaBillAssociation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>